initial html setup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,34 @@
 
     </header>
     <main>
+        <section class="dropdown-container">
+            <label for=""></label>
+            <select name="" id="">
+                <option value="">
+                <option value="">
+                <option value="">
+            </select>
+            <label for=""></label>
+            <select name="" id="">
+                <option value="">
+                <option value="">
+                <option value="">
+            </select>
+            <label for=""></label>
+            <select name="" id="">
+                <option value="">
+                <option value="">
+                <option value="">
+            </select>
+        </section>
+        <section class="image-container">
+            <div id=""></div>
+            <div id=""></div>
+            <div id=""></div>
+        </section>
+        <section id="text-container">
 
+        </section>
     </main>
     <footer>
 
