--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/test.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/bgs5xty.css">
     <title>City Builder</title>
@@ -16,34 +16,51 @@
 
     </header>
     <main>
+
         <section class="dropdown-container">
-            <label for=""></label>
-            <select name="" id="">
-                <option value="">
-                <option value="">
-                <option value="">
+            <label for="downtown">Downtown</label>
+            <select name="downtown" id="">
+                <option value="1">High Rise</option>
+                <option value="2">Mid Rise</option>
+                <option value="3">Low Rise</option>
             </select>
-            <label for=""></label>
-            <select name="" id="">
-                <option value="">
-                <option value="">
-                <option value="">
+            </label>
+            <label for="midtown">Midtown</label>
+            <select name="midtown" id="">
+                <option value="1">Art</option>
+                <option value="2">Shopping</option>
+                <option value="3">Transit</option>
             </select>
-            <label for=""></label>
-            <select name="" id="">
-                <option value="">
-                <option value="">
-                <option value="">
+            <label for="neighborhood">Neighborhood</label>
+            <select name="neighborhood" id="">
+                <option value="">Park</option>
+                <option value="">Food Cart</option>
+                <option value="">House</option>
             </select>
         </section>
+
         <section class="image-container">
             <div id=""></div>
             <div id=""></div>
             <div id=""></div>
+            <div id=""></div>
+            <div id=""></div>
+            <div id=""></div>
+            <div id=""></div>
+            <div id=""></div>
         </section>
-        <section id="text-container">
+        <section class="sign-container">
+            <div class="sign-board" id="text-container">
+                <h3>Welcome to Devland</h3>
+                <span>The city that codes!</span>
+                <span>Population: </span>
+                <span>Tourism: </span>
+                <span>Revenue: </span>
+            </div>
+            <div class="sign-pole"></div>
 
         </section>
+
     </main>
     <footer>
 
