eventListener set for density elevation weather select elements, displays corresponding divs on change

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </section>
 
         <section class="climate-container">
-            <div class="cloud visibility" id="weather1"></div>
-            <div class="sun visibility" id="weather2"></div>
+            <div class="cloud visibility" id="weather2"></div>
+            <div class="sun visibility" id="weather1"></div>
             <div class="raindrops visibility" id="weather3">
                 <div class="rain"></div>
                 <div class="rain"></div>
@@ -60,9 +60,9 @@
         </section>
 
         <section class="mountain-container">
-            <div class="triangle1 visibility" id="triangle1"></div>
-            <div class="triangle2 visibility" id="triangle2"></div>
-            <div class="triangle3 visibility" id="triangle3"></div>
+            <div class="triangle1 visibility" id="elevation1"></div>
+            <div class="triangle2 visibility" id="elevation2"></div>
+            <div class="triangle3 visibility" id="elevation3"></div>
         </section>
 
         <section class="cityscape-container">
