function created and test passing for createCountsString

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <section class="dropdown-container">
             <label for="density">Density
                 <select name="density" id="density">
-                    <option value="1">City</option>
+                    <option value="1">Rural</option>
                     <option value="2">Town</option>
-                    <option value="3">Rural</option>
+                    <option value="3">City</option>
                 </select>
             </label>
             <label for="elevation">Elevation
@@ -66,7 +66,7 @@
         </section>
 
         <section class="cityscape-container">
-            <div class="structure1 visibility" id="structure1">
+            <div class="structure1 visibility" id="structure3">
                 <div class="window"></div>
                 <div class="window"></div>
                 <div class="window"></div>
@@ -107,7 +107,7 @@
                 <div class="window"></div>
 
             </div>
-            <div class="structure3 visibility" id="structure3">
+            <div class="structure3 visibility" id="structure1">
                 <div class="window"></div>
                 <div class="window"></div>
                 <div class="window"></div>
@@ -123,12 +123,18 @@
             <div class="sign-board" id="text-container">
                 <h3>Welcome to Devland</h3>
                 <span id="city-slogan">The city that codes!</span>
-                <span id="population-stats">Population: </span>
-                <span id="elevation-stats">Elevation: </span>
-                <span id="weather-stats">Weather: </span>
+                <span>Population: </span>
+                <span>Elevation: </span>
+                <span>Weather: </span>
             </div>
             <div class="sign-pole"></div>
+            
+            <section id="statistics">
+                id="population-stats"
+                id="elevation-stats"
+                id="weather-stats"
 
+            </section>
         </section>
 
     </main>
