updates to styling, something is broke in the functionality of input and button elements, will compare file changes to see what happened

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section class="slogan-container">
-            <input type="text" placeholder="The city that codes" id="slogan-input">
+            <input type="text" placeholder="The city that codes!" id="slogan-input">
             <button type="submit" id="slogan-button">That's our motto!</button>
             <div id="city-slogan"></div>
         </section>
@@ -122,7 +122,7 @@
         <section class="sign-container">
             <div class="sign-board" id="text-container">
                 <h3>Welcome to Devland</h3>
-                <span>The city that codes!</span>
+                <p>The city that codes!</p>
                 <span>Population: </span>
                 <span>Elevation: </span>
                 <span>Weather: </span>
